--- a/metadata.yaml
+++ b/metadata.yaml
@@ -30,5 +30,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Painting -- History'
 - !lcc 'ND'
+- GITenberg
 title: A Text-Book of the History of Painting
 url: http://www.gutenberg.org/ebooks/18900
